[gd_scene load_steps=2 format=3 uid="uid://dliso8lp1b3b7"]

[ext_resource type="Script" path="res://system/menu/directory_manager/directory_manager.gd" id="1_12u0k"]

[node name="DirectoryManager" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12u0k")
metadata/_tab_index = 1

[node name="NativeFileDialog" type="NativeFileDialog" parent="."]
title = "Open a Directory..."
mode_overrides_title = false
file_mode = 2
access = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="Interface" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Interface"]
layout_mode = 2
text = "Library Directories"

[node name="HSeparator" type="HSeparator" parent="Interface"]
layout_mode = 2

[node name="DirectoryDisplay" type="ItemList" parent="Interface"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
allow_search = false

[node name="AddDirectory" type="Button" parent="Interface"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="RemoveDirectory" type="Button" parent="Interface"]
layout_mode = 2
text = "Remove"

[node name="BuildLibrary" type="Button" parent="Interface"]
layout_mode = 2
text = "Scan Directories"

[connection signal="directories_changed" from="." to="." method="_on_directories_changed"]
[connection signal="dir_selected" from="NativeFileDialog" to="." method="_on_native_file_dialog_dir_selected"]
[connection signal="item_activated" from="Interface/DirectoryDisplay" to="." method="_on_directory_display_item_activated"]
[connection signal="pressed" from="Interface/AddDirectory" to="." method="_on_add_directory_pressed"]
[connection signal="pressed" from="Interface/RemoveDirectory" to="." method="_on_remove_directory_pressed"]
[connection signal="pressed" from="Interface/BuildLibrary" to="." method="_on_build_library_pressed"]
